--- a/package.json
+++ b/package.json
@@ -19,5 +19,166 @@
     "codeceptjs": "^3.2.2",
     "playwright": "^1.16.3",
     "puppeteer": "^11.0.0"
+  },
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "agent-base": "^6.0.2",
+    "allure-js-commons": "^1.3.2",
+    "ansi-escapes": "^3.2.0",
+    "ansi-regex": "^6.0.1",
+    "ansi-styles": "^2.2.1",
+    "archiver": "^3.1.1",
+    "archiver-utils": "^2.1.0",
+    "arrify": "^2.0.1",
+    "async": "^2.6.3",
+    "axios": "^0.24.0",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "becke-ch--regex--s0-0-v1--base--pl--lib": "^1.4.0",
+    "bl": "^4.1.0",
+    "bo-selector": "^0.0.10",
+    "brace-expansion": "^1.1.11",
+    "browser-stdout": "^1.3.0",
+    "buffer": "^5.7.1",
+    "buffer-crc32": "^0.2.13",
+    "chalk": "^1.1.3",
+    "chardet": "^0.7.0",
+    "chownr": "^1.1.4",
+    "cli-cursor": "^2.1.0",
+    "cli-width": "^2.2.1",
+    "commander": "^2.20.3",
+    "compress-commons": "^2.1.1",
+    "concat-map": "^0.0.1",
+    "config-chain": "^1.1.13",
+    "core-util-is": "^1.0.3",
+    "crc": "^3.8.0",
+    "crc32-stream": "^3.0.1",
+    "css-to-xpath": "^0.1.0",
+    "cucumber-expressions": "^6.6.2",
+    "debug": "^4.1.1",
+    "deep-extend": "^0.6.0",
+    "devtools-protocol": "^0.0.901419",
+    "diff": "^3.3.1",
+    "editorconfig": "^0.15.3",
+    "end-of-stream": "^1.4.4",
+    "err-code": "^1.1.2",
+    "escape-string-regexp": "^1.0.5",
+    "external-editor": "^3.1.0",
+    "extract-zip": "^2.0.1",
+    "fd-slicer": "^1.1.0",
+    "figures": "^2.0.0",
+    "file-type": "^7.7.1",
+    "fn-args": "^4.0.0",
+    "follow-redirects": "^1.5.10",
+    "fs-constants": "^1.0.0",
+    "fs.realpath": "^1.0.0",
+    "get-stream": "^5.2.0",
+    "gherkin": "^5.1.0",
+    "glob": "^6.0.4",
+    "graceful-fs": "^4.2.8",
+    "growl": "^1.10.3",
+    "has-ansi": "^2.0.0",
+    "has-flag": "^2.0.0",
+    "he": "^1.1.1",
+    "https-proxy-agent": "^5.0.0",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "inquirer": "^8.2.0",
+    "ip": "^1.1.5",
+    "is-buffer": "^2.0.5",
+    "is-fullwidth-code-point": "^2.0.0",
+    "isarray": "^1.0.0",
+    "jpeg-js": "^0.4.3",
+    "js-beautify": "^1.14.0",
+    "js2xmlparser": "^3.0.0",
+    "jsonfile": "^4.0.0",
+    "lazystream": "^1.0.1",
+    "lodash": "^4.17.21",
+    "lodash.defaults": "^4.2.0",
+    "lodash.difference": "^4.5.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.merge": "^4.6.2",
+    "lodash.union": "^4.6.0",
+    "lru-cache": "^4.1.5",
+    "mime": "^2.6.0",
+    "mimic-fn": "^1.2.0",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "mkdirp": "^0.5.5",
+    "mkdirp-classic": "^0.5.3",
+    "ms": "^2.1.3",
+    "mute-stream": "^0.0.7",
+    "nested-error-stacks": "^2.0.1",
+    "node-fetch": "^2.6.5",
+    "nopt": "^5.0.0",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "once": "^1.4.0",
+    "onetime": "^2.0.1",
+    "os-tmpdir": "^1.0.2",
+    "p-try": "^2.2.0",
+    "parse-function": "^5.6.10",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "pend": "^1.2.0",
+    "pkg-dir": "^4.2.0",
+    "playwright-core": "^1.16.3",
+    "pngjs": "^5.0.0",
+    "process-nextick-args": "^2.0.1",
+    "progress": "^2.0.3",
+    "promise-retry": "^1.1.1",
+    "proper-lockfile": "^4.1.2",
+    "proto-list": "^1.2.4",
+    "proxy-from-env": "^1.1.0",
+    "pseudomap": "^1.0.2",
+    "pump": "^3.0.0",
+    "rc": "^1.2.8",
+    "readable-stream": "^3.6.0",
+    "requireg": "^0.1.8",
+    "resolve": "^1.7.1",
+    "restore-cursor": "^2.0.0",
+    "retry": "^0.10.1",
+    "rimraf": "^3.0.2",
+    "run-async": "^2.4.1",
+    "rxjs": "^6.6.7",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^5.7.1",
+    "sigmund": "^1.0.1",
+    "signal-exit": "^3.0.6",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.6.1",
+    "socks-proxy-agent": "^6.1.1",
+    "sprintf-js": "^1.1.2",
+    "stack-utils": "^2.0.5",
+    "string_decoder": "^1.3.0",
+    "string-width": "^5.0.1",
+    "strip-ansi": "^7.0.1",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^2.0.0",
+    "tar-fs": "^2.1.1",
+    "tar-stream": "^2.2.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "tr46": "^0.0.3",
+    "tslib": "^1.14.1",
+    "unbzip2-stream": "^1.4.3",
+    "universalify": "^0.1.2",
+    "util-deprecate": "^1.0.2",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.2.3",
+    "xmlcreate": "^1.0.2",
+    "xpath-builder": "^0.0.7",
+    "yallist": "^2.1.2",
+    "yauzl": "^2.10.0",
+    "yazl": "^2.5.1",
+    "zip-stream": "^2.1.3"
   }
 }
