--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -52,3 +52,5 @@ jobs:
       run: "BROWSER=webkit node ./bin/codecept.js run -c test/acceptance/codecept.Playwright.js --grep @Playwright --debug"
     - name: run unit tests
       run: ./node_modules/.bin/mocha test/helper/Playwright_test.js
+      name: Test_test
+      run: npx codeceptjs run Test_test.js
