--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Run Unit tests
 
 on:
   push:
@@ -8,15 +8,10 @@ on:
     branches:
       - '**'
 
-env:
-  CI: true
-  # Force terminal colors. @see https://www.npmjs.com/package/colors
-  FORCE_COLOR: 1
-
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
 
     strategy:
       matrix:
@@ -28,29 +23,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: shivammathur/setup-php@v2
-      with:
-        php-version: 7.4
-    - name: npm install
-      run: |
-        npm install
+    - run: npm install
       env:
+        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: true
         PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
-    - name: Install deps
-      run: npx playwright install-deps
-    - name: start a server
-      run: "php -S 127.0.0.1:8000 -t test/data/app &"
-    - name: run chromium tests
-      run: "./bin/codecept.js run -c test/acceptance/codecept.Playwright.js --grep @Playwright --debug"
-    - name: run chromium with restart==browser tests
-      run: "BROWSER_RESTART=browser ./bin/codecept.js run -c test/acceptance/codecept.Playwright.js --grep @Playwright --debug"
-    - name: run chromium with restart==session tests
-      run: "BROWSER_RESTART=session ./bin/codecept.js run -c test/acceptance/codecept.Playwright.js --grep @Playwright --debug"
-    - name: run firefox tests
-      run: "BROWSER=firefox node ./bin/codecept.js run -c test/acceptance/codecept.Playwright.js --grep @Playwright --debug"
-    - name: run webkit tests
-      run: "BROWSER=webkit node ./bin/codecept.js run -c test/acceptance/codecept.Playwright.js --grep @Playwright --debug"
-    - name: run unit tests
-      run: ./node_modules/.bin/mocha test/helper/Playwright_test.js
-      name: Test_test
-      run: npx codeceptjs run Test_test.js
+    - run: npm test
