--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,30 +1,20 @@
-name: Run Unit tests
+name: Run Codeception test cases
 
-on:
-  push:
-    branches:
-      - 3.x
-  pull_request:
-    branches:
-      - '**'
+on: [push]
 
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
-
-    strategy:
-      matrix:
-        node-version: [14.x]
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-      env:
-        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: true
-        PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
-    - run: npm test
+    - uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run:  composer install 
+      
+    - name: Run chromedriver
+      run:  nohup $CHROMEWEBDRIVER/chromedriver --url-base=/wd/hub /dev/null 2>&1 &
+       
+    - name: Run test cases
+      run:  npx codeceptjs run Test_test.js
